# airbrake-rust

./: Cargo.toml  LICENCE.md  README.md  build.rs  roadmap.md
examples/: actix_web_example.rs
src/: async_sender.rs  async_sender.rs.old  client.rs  config.rs  context.rs  errors.rs  filter_chain.rs  lib.rs  notice.rs  notice.rs.in  notifier.rs  sync_sender.rs
src/notice/: backtrace.rs  context.rs  error.rs  mod.rs  notice.rs  notice_backtrace.rs
tests/: airbrake.rs  integration_test.rs
