[package]
name = "airbrake"
version = "0.3.0"
authors = ["Kyrylo Silin <silin@kyrylo.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kyrylo/airbrake-rust"
homepage = "https://github.com/kyrylo/airbrake-rust"
documentation = "https://github.com/kyrylo/airbrake-rust"
description = """
"""

[dependencies]
reqwest = "0.8.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
