[package]
name = "airbrake"
version = "0.2.0"
authors = ["Kyrylo Silin <silin@kyrylo.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kyrylo/airbrake-rust"
homepage = "https://github.com/kyrylo/airbrake-rust"
documentation = "https://github.com/kyrylo/airbrake-rust"
description = """
Airbrake Rust is an Airbrake (https://airbrake.io) notifier library for the Rust
Programming language. The library provides minimalist API that enables the
ability to send Rust errors to the Airbrake dashboard.
"""
edition = "2018"

[dependencies]
tokio = "0.2.19"
hyper = "0.13.5"
hyper-tls = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3"
futures = "0.3.4"
