[package]
name = "airbrake"
version = "0.2.0"
authors = ["Kyrylo Silin <silin@kyrylo.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kyrylo/airbrake-rust"
homepage = "https://github.com/kyrylo/airbrake-rust"
documentation = "https://github.com/kyrylo/airbrake-rust"
description = """
Airbrake Rust is an Airbrake (https://airbrake.io) notifier library for the Rust
Programming language. The library provides minimalist API that enables the
ability to send Rust errors to the Airbrake dashboard.
"""
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3"
backtrace = "0.3"

[dev-dependencies]
more-asserts = "0.2.1"
# Used in the actix_web_example
actix-web = "2"
actix-rt = "1"
env_logger = "0.7.1"
